# clipvault

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  bench.yml  cd-binaries.yml  cd.yml  check.yml  ci.yml  release-binaries.yml  release.yml  test.yml
benches/: base.rs
extras/: argfile.txt  clipvault.service  clipvault_alt.sh  clipvault_fzf.sh  clipvault_ignore_sensitive.sh  clipvault_rofi.sh  clipvault_wofi.sh
src/: cli.rs  defaults.rs  lib.rs  logging.rs  main.rs  utils.rs
src/commands/: clear.rs  delete.rs  get.rs  list.rs  mod.rs  store.rs
src/database/: data.rs  mod.rs
src/database/migrations/01-clipboard/: down.sql  up.sql
src/database/migrations/02-last-updated-index/: down.sql  up.sql
src/database/queries/: delete_latest.sql  delete_nth_entry.sql  get_all.sql  get_nth_entry.sql  mod.rs  upsert_post.sql
src/database/snapshots/: clipvault__database__tests__migrations.snap
tests/: cmd.rs
